Added custom query, fixed DB population, deleted empty test
Now football teams are sorting via query. DB population is happening via import.sql instead of run method.

--- a/footballmanager_backend/src/main/resources/application.properties
+++ b/footballmanager_backend/src/main/resources/application.properties
@@ -1,7 +1,6 @@
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:postgresql://localhost:5432/football_manager
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-
-spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.hbm2ddl.import_files_sql_extractor=org.hibernate.tool.hbm2ddl.MultipleLinesSqlCommandExtractor
